--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
+<!-- html5 standartına göre -->
 <!DOCTYPE html>
+<!--dil: ingilizce-->
 <html lang="en">
-
 <head>
+    <!--Dil karakter sorunu -->
     <meta charset="UTF-8">
+    <!-- Responsive design-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SL Academy Html5</title>
 </head>
 
 <body>
     <!-- start codes -->
+    <h1>heading-1</h1>
+    <h2>heading-2</h2>
+    <h3>heading-3</h3>
+    <h4>heading-4</h4>
+    <h5>heading-5</h5>
+    <h6>heading-6</h6>
+    <br><br>
+    <hr>
+    <p>Merhabalar Güzel insanlar</p>
 
     <!-- end codes -->
 </body>
