--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
 
 <body>
     <!-- start codes -->
+    <span>aynı satır-1</span>
+    <span>aynı satır-2</span>
+    <div>tepsi ve alt satır</div>
+    <br><br>
+    <hr>
+    <!-- Formatter -->
+    <b>bold</b><br/>
+    <i>italic</i><br/>
+    <big>big</big><br/>
+    <small>small</small><br/>
+    <strong>strong</strong><br/>
+    <em>emphasized</em><br/>
+    <mark>marked</mark><br/>
+    <del>1000</del>TL 999TL<br/>
+    <ins>altı çizmek</ins><br/>
+    <u>altı çizmek</u><br/>
+    log<sub>2</sub>n <br/>
+    10<sup>5</sup><br/>
+    <code>psvm</code>
+    <pre>
+        1.satır 
+         2.satır 
+           3.satır
+        4.satır   
+    </pre>
+
+
+    <br><br>
+    <hr>
+    <!-- heading -->
     <h1>heading-1</h1>
     <h2>heading-2</h2>
     <h3>heading-3</h3>
